--- a/2nd_sem/Lab3/DynamicButtons/MainWindow.xaml
+++ b/2nd_sem/Lab3/DynamicButtons/MainWindow.xaml
@@ -1,12 +1,42 @@
 ﻿<Window x:Class="DynamicButtons.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DynamicButtons"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="Lab 3" Height="450" Width="800">
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,0,0,10">
+            <StackPanel Margin="0,0,10,0">
+                <TextBlock Text="From:" />
+                <TextBox x:Name="FromTextBox" Width="80"/>
+            </StackPanel>
+            <StackPanel Margin="0,0,10,0">
+                <TextBlock Text="To:" />
+                <TextBox x:Name="ToTextBox" Width="80"/>
+            </StackPanel>
+            <StackPanel Margin="0,0,10,0">
+                <TextBlock Text="Step:" />
+                <TextBox x:Name="StepTextBox" Width="80"/>
+            </StackPanel>
+            <StackPanel>
+                <TextBlock Text="Multiple:" />
+                <TextBox x:Name="MultipleTextBox" Width="80"/>
+            </StackPanel>
+        </StackPanel>
+
+        <!-- Кнопки Generate и Delete -->
+        <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="0,0,0,10">
+            <Button x:Name="GenerateButton" Content="Generate" Width="100" Margin="0,0,10,0"/>
+            <Button x:Name="DeleteButton" Content="Delete" Width="100"/>
+        </StackPanel>
+
+        <!-- Контейнер для кнопок с прокруткой -->
+        <ScrollViewer Grid.Row="2" VerticalScrollBarVisibility="Auto">
+            <WrapPanel x:Name="ButtonsPanel" />
+        </ScrollViewer>
     </Grid>
 </Window>
