--- a/2nd_sem/Lab3/happiness/MainWindow.xaml
+++ b/2nd_sem/Lab3/happiness/MainWindow.xaml
@@ -1,7 +1,9 @@
 ﻿<Window x:Class="happiness.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="title" Height="250" Width="400"
+        Title="title"
+        Height="250"
+        Width="400"
         WindowStartupLocation="CenterScreen"
         KeyDown="Window_KeyDown">
     <Grid>
@@ -10,17 +12,28 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="do you enjoy your life?" FontSize="20"
-                   HorizontalAlignment="Center" Margin="10" />
+        <TextBlock Text="do you enjoy your life?"
+                FontSize="20"
+                   HorizontalAlignment="Center"
+                Margin="10"/>
 
         <Canvas Grid.Row="1">
-            <Button x:Name="YesButton" Content="yes" Width="80" Height="40"
-                    Canvas.Left="100" Canvas.Top="50"
+            <Button x:Name="YesButton"
+                    Content="yes"
+                    Width="80"
+                    Height="40"
+                    Canvas.Left="100"
+                    Canvas.Top="50"
                     MouseEnter="YesButton_MouseEnter"
-                    IsTabStop="False"/>
+                    IsTabStop="False"
+                    Click="YesButton_Click"/>
 
-            <Button x:Name="NoButton" Content="no" Width="80" Height="40"
-                    Canvas.Left="200" Canvas.Top="50"
+            <Button x:Name="NoButton"
+                    Content="no"
+                    Width="80"
+                    Height="40"
+                    Canvas.Left="200"
+                    Canvas.Top="50"
                     Click="NoButton_Click"/>
         </Canvas>
     </Grid>
